# turing

./: Cargo.toml  README.org
example_machines/: deterministic_not  short_circuit_deterministic_and  short_circuit_deterministic_or  template  test
src/: generic_parser.rs  lib.rs  machinary.rs  main.rs  parser.rs  traits.rs
